Bug 116343 - "Not Tagged" has disappeared from the Tags Filter view when changing album library path.
Summary: "Not Tagged" has disappeared from the Tags Filter view when changing album li...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Filters (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-14 14:47 UTC by Tung NGUYEN
Modified: 2017-07-13 15:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tung NGUYEN 2005-11-14 14:47:32 UTC
Version:           0.8.0-rc (using KDE KDE 3.4.2)
Installed from:    Compiled From Sources
OS:                Linux

- Launch DigiKam and display the view "Tags Filter" (right sidebar), you can see "Not Tagged" in brown.
- Open "Settings->Configure Digikam..." and change the album library path to another album library.

=> now, you can see that "Not Tagged" has disappeared from the Tags Filter view of the new album library.
Comment 1 Joern Ahrens 2005-12-19 11:30:26 UTC
SVN commit 489619 by jahrens:

Adding the "Not Tagged" entry, when the tag filter was cleared.

BUG: 116343


 M  +3 -0      tagfilterview.cpp  


--- trunk/extragear/graphics/digikam/digikam/tagfilterview.cpp #489618:489619
@@ -421,6 +421,9 @@
 void TagFilterView::slotClear()
 {
     clear();
+    
+    TagFilterViewItem* notTaggedItem = new TagFilterViewItem(this, 0, true);
+    notTaggedItem->setPixmap(0, getBlendedIcon(0));
 }
 
 void TagFilterView::slotTimeOut()