Adding the "Not Tagged" entry, when the tag filter was cleared.

BUG: 116343

svn path=/trunk/extragear/graphics/digikam/; revision=489619